[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/actors/objects/breakable_block/breakable_block.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/breakable_block/icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/actors/objects/breakable_block/sm64_breaking_box.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/objects/breakable_block/particles.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/objects/breakable_block/dust.png" type="Texture" id=5]
[ext_resource path="res://scenes/actors/objects/breakable_block/BreakParticle.tres" type="Material" id=6]
[ext_resource path="res://scenes/actors/objects/breakable_block/DustParticle.tres" type="Material" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 209, 100.541 )

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=6]
particles_animation = true
particles_anim_h_frames = 10
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="BreakableBlock" type="Node2D"]
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="StompArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2( 0, -21 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 4 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
process_parent = true
physics_process_parent = true

[node name="Broken" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="BreakParticle" type="Particles2D" parent="."]
material = SubResource( 5 )
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 6 )
texture = ExtResource( 4 )

[node name="DustParticle" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
material = SubResource( 6 )
emitting = false
amount = 5
one_shot = true
explosiveness = 1.0
process_material = ExtResource( 7 )
texture = ExtResource( 5 )
